<resources>
    <string name="app_name">Alarm 15</string>
    <string name="api_key">${apiKey}</string>

    <!-- TODO: Delete all which start with dummy_ and find their usages and delete them too  -->
    <!-- Labels (Bottom NavBar) -->
    <string name="label_clock">Clock</string>
    <string name="label_alarm">Alarm</string>
    <string name="label_location">Location</string>
    <string name="label_timer">Timer</string>
    <string name="label_stopwatch">Stopwatch</string>

    <!-- Labels (3-dot menu) -->
    <string name="label_settings">Settings</string>
    <string name="label_help">Help</string>

    <!-- Labels (Top of each fragment)  -->
    <string name="title_clock_fragment">Clock fragment</string>
    <string name="title_alarm_fragment">Alarm</string>
    <string name="title_location_fragment">Location</string>
    <string name="title_timer_fragment">Timer</string>
    <string name="title_stopwatch_fragment">Stopwatch</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Labels (Add Alarm dialog)   -->
    <string name="label_add_alarm">Add Alarm</string>
    <string name="label_add_alarm_save">Save</string>
    <string name="label_add_alarm_discard">Discard</string>
    <string name="label_add_alarm_sound">Alarm sound</string>
    <string name="label_add_alarm_vibrate">Vibration</string>
    <string name="label_add_alarm_snooze">Snooze</string>
    <string name="label_add_alarm_name">Alarm name</string>
    <string name="label_monday">M</string>
    <string name="label_tuesday">T</string>
    <string name="label_wednesday">W</string>
    <string name="label_thursday">T</string>
    <string name="label_friday">F</string>
    <string name="label_saturday">S</string>
    <string name="label_sunday">S</string>
    <string name="dummy_add_alarm_text">Tomorrow-Sat,27 Apr</string>
    <string name="sound_select_title">Select alarm sound</string>
    <string name="vibrate_select_title">Select vibrate pattern</string>
    <string name="ok">OK</string>

    <!-- Accessibility hints (Content Descriptions)   -->
    <string name="hint_add_alarm">Add Alarm</string>
    <string name="hint_add_clock_alarm">Add clock alarm</string>
    <string name="hint_add_location_alarm">Add location alarm</string>
    <string name="dummy_delete_pref">Delete pref</string>

    <!-- Welcome Screen strings   -->
    <string name="welcome_title">Welcome</string>
    <string name="welcome_message">This app was developed by Malindu.\n\nFollowing permissions are required for the proper functionality of this app.</string>
    <string name="welcome_button_permissions">Review Permissions</string>
    <string name="welcome_button_tour">Take Tour</string>
    <string name="welcome_button_cancel">Quit</string>

    <string name="dialog_permissions_title_first">Hey there!</string>
    <string name="dialog_permissions_title_second">If we say "Please" ?</string>
    <string name="dialog_permissions_title_third">Sadly, you have no other choice</string>
    <string name="dialog_permissions_message">Following permissions are required for using Alarm features</string>
    <string name="dialog_permissions_message_location">Following permissions are required for using Location features</string>
    <string name="dialog_permissions_ok">Got it</string>
    <string name="dialog_permissions_cancel">Over my dead body!</string>
    <string name="dialog_alarm_delete_title">Confirm</string>
    <string name="dialog_alarm_delete_message">This action cannot be reversed.</string>
    <string name="dialog_alarm_delete_ok">Delete</string>
    <string name="dialog_alarm_delete_cancel">Cancel</string>

    <!-- Add Location Alarm Dialog labels -->
    <string name="label_notify_sensitivity">Notify sensitivity :</string>
    <string name="label_in_proximity">In Proximity</string>
    <string name="label_on_exact_location">On Exact Location</string>
    <string name="label_range">Range</string>
    <string name="label_set_range">Set Range</string>
    <string name="label_meters">meters</string>
    <string name="hint_search">Search</string>
    <string name="label_where_to">Where to…</string>
    <string name="label_alert_type">Alert type</string>
    <string name="label_alarm_note">Add note</string>
    <string name="label_alarm_note_desc">Tap here to add note</string>
    <string name="title_select_range">Select range</string>
    <string name="label_custom_range">Enter :</string>
    <string-array name="range_list">
        <item>100 m</item> <item>200 m</item> <item>500 m</item>
        <item>1 km</item> <item>2 km</item> <item>5 km</item>
        <item>Custom</item>
    </string-array>
    <string name="label_units">Unit</string>
    <string-array name="unit_list">
        <item>m</item> <item>km</item>
    </string-array>
    <string name="title_select_alert_type">Select alert type</string>

    <!-- Add Location Alarm - Note -->
    <string name="location_expand">Expand</string>
    <string name="location_note_bold">Bold</string>
    <string name="location_note_italic">Italic</string>
    <string name="location_note_underline">Underline</string>
    <string name="location_note_strikethrough">Strikethrough</string>
    <string name="location_note_bullet">Bullets</string>
    <string name="location_note">Note</string>
    <string name="location_note_save">save</string>
    <string name="location_note_discard">discard</string>

    <!-- LocationService -->
    <string name="turn_off">Turn off</string>

    <!-- AlarmService -->
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>

    <!-- Alarm full screen ring activity -->
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="label_monday_short">Mon</string>
    <string name="label_tuesday_short">Tue</string>
    <string name="label_wednesday_short">Wed</string>
    <string name="label_thursday_short">Thu</string>
    <string name="label_friday_short">Fri</string>
    <string name="label_saturday_short">Sat</string>
    <string name="label_sunday_short">Sun</string>

    <!-- Clock Fragment   -->
    <string name="worldclock_add_title">Select region</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="toast_city_exists">Already selected!</string>
    <string name="add_city">Add city</string>
</resources>