<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlarmAddNewClockDialog">

    <TextView
        android:id="@+id/label_add_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_add_alarm"
        android:textSize="40sp"
        android:layout_marginHorizontal="10dp"/>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_add_alarm"
        android:headerBackground="@color/black"
        android:timePickerMode="spinner"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"/>

    <LinearLayout
        android:id="@+id/layout_alarm_frequency"
        android:layout_below="@id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_alarm_frequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dummy_add_alarm_text"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="6"
            android:textSize="17sp"/>
        <Button
            android:id="@+id/btn_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/icon_calendar"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/background_button_add_alarm"/>
        <!-- @style/Widget.App.Button.OutlinedButton.IconOnly-->
    </LinearLayout>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_week"
        android:layout_below="@id/layout_alarm_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="false"
        app:chipSpacingHorizontal="0dp"
        android:layout_marginHorizontal="10dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_monday"
            app:chipStrokeColor="@color/ash_border"
            android:checkable="true"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tuesday"
            app:chipStrokeColor="@color/ash_border"
            android:checkable="true"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_wednesday"
            app:chipStrokeColor="@color/ash_border"
            android:checkable="true"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_thursday"
            app:chipStrokeColor="@color/ash_border"
            android:checkable="true"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_friday"
            app:chipStrokeColor="@color/ash_border"
            android:checkable="true"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_saturday"
            android:textColor="@color/ash"
            app:chipStrokeColor="@color/ash_border"
            android:checkable="true"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sunday"
            android:textColor="#ff0000"
            app:chipStrokeColor="@color/ash_border"
            android:checkable="true"/>
        <!--com.google.android.material.chip.Chip
            android:id="@+id/chip_calendar"
            android:layout_below="@id/time_picker"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/icon_calendar"
            android:layout_marginHorizontal="10dp"
            android:text="       "
            android:textColor="@color/black"
            style="?attr/materialIconButtonStyle"/-->
    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/txt_alarm_label"
        android:layout_below="@id/chipGroup_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_add_alarm_name"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/label_add_alarm_sound"
        android:textSize="20sp"
        android:layout_below="@id/txt_alarm_label"
        android:layout_marginHorizontal="10dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_vibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/label_add_alarm_vibrate"
        android:textSize="20sp"
        android:layout_below="@id/switch_sound"
        android:layout_marginHorizontal="10dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_snooze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/label_add_alarm_snooze"
        android:textSize="20sp"
        android:layout_below="@id/switch_vibration"
        android:layout_marginHorizontal="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_discard"
            android:text="@string/label_add_alarm_discard"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="@color/md_theme_error"
            android:layout_marginEnd="2dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_save"
            android:text="@string/label_add_alarm_save"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="2dp"/>
    </LinearLayout>

</RelativeLayout>