<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="5dp"
    android:elevation="10dp"
    android:theme="@style/AppTheme"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="10dp"
    app:strokeColor="@color/md_theme_primary"
    android:id="@+id/cardview_alarm_item_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cardview_alarm_label_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="-5dp"
                android:layout_marginEnd="-10dp"
                android:src="@drawable/icon_label_selector" />

            <TextView
                android:id="@+id/cardview_alarm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Dummy alarm label" />
        </LinearLayout>

        <TextView
            android:id="@+id/cardview_alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="12:30 PM"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_alarm_label_layout" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/cardview_alarm_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/cardview_alarm_frequency_weekdays_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cardview_alarm_switch"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/cardview_txt_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/label_monday"
                android:textColor="@color/ash_border" />

            <TextView
                android:id="@+id/cardview_txt_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/label_tuesday"
                android:textColor="@color/ash_border" />

            <TextView
                android:id="@+id/cardview_txt_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/label_wednesday"
                android:textColor="@color/ash_border" />

            <TextView
                android:id="@+id/cardview_txt_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/label_thursday"
                android:textColor="@color/ash_border" />

            <TextView
                android:id="@+id/cardview_txt_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/label_friday"
                android:textColor="@color/ash_border" />

            <TextView
                android:id="@+id/cardview_txt_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/label_saturday"
                android:textColor="@color/ash_border" />

            <TextView
                android:id="@+id/cardview_txt_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/label_sunday"
                android:textColor="@color/ash_border" />
        </LinearLayout>

        <TextView
            android:id="@+id/cardview_alarm_frequency_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="Thu, 23 May"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cardview_alarm_switch"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>